<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfitAdd">


    <LinearLayout
        android:id="@+id/lnSpend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <!--  <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom"
              android:orientation="horizontal"
              android:layout_weight="1"
              android:gravity="center">

              <TextView
                  android:id="@+id/tvData"
                  android:layout_width="50dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:gravity="left"
                  android:text="Дата"
                  android:textSize="25dp" />

              <EditText
                  android:id="@+id/etData"
                  android:layout_width="10dp"
                  android:layout_height="wrap_content"
                  android:ems="10"
                  android:inputType=""
                  android:gravity="center_horizontal"
                  android:layout_weight="1"/>
          </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tvNameSpend"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tvMessageBuy"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tvType"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/tvType"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etType"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tvSum"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="left"
                android:text="@string/tvSum"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etSum"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:ems="10"
                android:inputType="number"
                android:layout_weight="50"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnAdd"
                android:text="Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--<Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update" />
-->
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>